--- a/src/index.scss
+++ b/src/index.scss
@@ -46,7 +46,7 @@ body {
 
 .app::before {
   content: '';
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
@@ -270,15 +270,20 @@ body {
   .project {
     border: 1px solid green;
     display: flex;
+    background-color: $white;
+    border-radius: 20px;
   }
 
   .slider-container {
     border: 1px solid pink;
+    background-color: $gray;
+    max-width: 500px;
+    border-radius: 20px 0 0 20px;
   }
 
   .slider {
     border: 1px solid cyan;
-    margin-inline: 60px;
+    margin: 30px 60px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -287,7 +292,7 @@ body {
 
   .slider-images {
     border: 1px solid red;
-    max-width: 400px;
+    width: 350px;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -297,5 +302,4 @@ body {
       height: 100%;
     }
   }
-
 }
