--- a/src/index.scss
+++ b/src/index.scss
@@ -272,12 +272,13 @@ body {
     display: flex;
     background-color: $white;
     border-radius: 20px;
+    margin-bottom: 75px;
   }
 
   .slider-container {
     border: 1px solid pink;
     background-color: $gray;
-    max-width: 500px;
+    // max-width: 500px;
     border-radius: 20px 0 0 20px;
   }
 
@@ -300,6 +301,29 @@ body {
     img {
       width: 100%;
       height: 100%;
+    }
+  }
+
+  .info-container {
+    padding: 30px 60px;
+
+    .details {
+      h3 {
+        font-size: $title--md;
+        font-weight: 700;
+        margin: 0;
+        text-transform: uppercase;
+      }
+
+      p {
+        font-size: $text--md;
+        font-weight: 700;
+      }
+
+      ul {
+        font-size: $text--lg;
+        font-weight: 300;
+      }
     }
   }
 }
