--- a/src/index.scss
+++ b/src/index.scss
@@ -267,13 +267,6 @@ body {
   border: 1px solid blue;
   margin-inline: 150px;
 
-  .projects-section {
-    border: 1px solid black;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
   .portfolio-item {
     border: 1px solid green;
     display: flex;
@@ -357,6 +350,21 @@ body {
       padding: 10px 30px;
       border-radius: 25px;
       flex-wrap: wrap;
+    }
+  }
+
+  .projects-section {
+    border: 1px solid black;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    .info-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding-inline: 45px;
+      height: 100%;
     }
   }
 }
