--- a/src/index.scss
+++ b/src/index.scss
@@ -359,6 +359,10 @@ body {
     flex-wrap: wrap;
     justify-content: center;
 
+    .slider-container {
+      border-radius: 20px 20px 0 0 ;
+    }
+
     .info-container {
       display: flex;
       flex-direction: column;
