--- a/src/index.scss
+++ b/src/index.scss
@@ -252,19 +252,61 @@ body {
   .phone-control {
     text-align: center;
 
-    .progress-meter {
-      position: relative;
-      width: 200px;
-      height: 3px;
-      background-color: $light-cherry;
-      margin: 25px;
-      border-radius: 3px;
+    // .progress-meter {
+    //   position: relative;
+    //   width: 200px;
+    //   height: 3px;
+    //   background-color: $light-cherry;
+    //   margin: 25px;
+    //   border-radius: 3px;
 
-      img {
-        position: absolute;
-        top: -24px;
-        left: -24px;
+    //   img {
+    //     position: absolute;
+    //     top: -24px;
+    //     left: -24px;
+    //   }
+    // }
+
+    input[type="range"] {
+      -webkit-appearance: none;
+      appearance: none;
+      background: transparent;
+      cursor: pointer;
+      width: 12rem;
+      
+
+      &::-webkit-slider-runnable-track {
+        background: $cherry;
+        height: 0.25rem;
+        border-radius: 1rem;
       }
+
+      ::-moz-range-track {
+        background: $cherry;
+        height: 0.5rem;
+        border-radius: 1rem;
+      }
+
+      &::-webkit-slider-thumb {
+        -webkit-appearance: none; 
+        appearance: none;
+        margin-top: -6px; 
+        background-color: $pink;
+        height: 1rem;
+        width: 1rem; 
+        border-radius: 50%;
+      }
+
+      &::-moz-range-thumb {
+        -webkit-appearance: none; 
+        appearance: none;
+        margin-top: -6px; 
+        background-color: $pink;
+        height: 1rem;
+        width: 1rem; 
+        border-radius: 50%;
+      }
+
     }
 
     .control-buttons {
