--- a/src/index.scss
+++ b/src/index.scss
@@ -345,33 +345,51 @@ body {
   // }
 
   .slider-container {
-    // border: 1px solid pink;
+    border: 1px solid pink;
     background-color: $gray;
-    // max-width: 500px;
     border-radius: 20px 0 0 20px;
     display: flex;
     align-items: center;
   }
 
   .slider {
-    // border: 1px solid cyan;
+    border: 1px solid cyan;
     margin: 30px 60px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-height: 400px;
+    // max-height: 400px;
   }
 
-  .slider-images {
+  .img-btn-container {
+    display: flex;
+    align-items: center;
+    max-width: 450px;
+    max-height: 400px;
+
+    button {
+      width: 40px;
+      height: 35px;
+      margin: 10px;
+      border: none;
+      background-color: transparent;
+      cursor: pointer;
+    }
+    
+    img {
+      width: 30px;
+    }
+  }
+
+  .images {
     // border: 1px solid red;
-    width: 350px;
+    width: 450px;
     overflow: hidden;
     display: flex;
     align-items: center;
 
     img {
       width: 100%;
-      height: 100%;
     }
   }
 
@@ -415,25 +433,6 @@ body {
       flex-wrap: wrap;
     }
   }
-
-  // .projects-section {
-  //   border: 1px solid black;
-  //   display: flex;
-  //   flex-wrap: wrap;
-  //   justify-content: center;
-
-  //   .slider-container {
-  //     border-radius: 20px 20px 0 0 ;
-  //   }
-
-  //   .info-container {
-  //     display: flex;
-  //     flex-direction: column;
-  //     justify-content: space-between;
-  //     padding-inline: 45px;
-  //     height: 100%;
-  //   }
-  // }
 }
 
 .contact {
