--- a/src/index.scss
+++ b/src/index.scss
@@ -338,14 +338,8 @@ body {
     margin-bottom: 75px;
   }
 
-  // .projects-section .portfolio-item {
-  //   max-width: 500px;
-  //   flex-direction: column;
-  //   margin-inline: 20px;
-  // }
-
   .slider-container {
-    border: 1px solid pink;
+    // border: 1px solid pink;
     background-color: $gray;
     border-radius: 20px 0 0 20px;
     display: flex;
@@ -353,11 +347,12 @@ body {
   }
 
   .slider {
-    border: 1px solid cyan;
-    margin: 30px 60px;
+    // border: 1px solid cyan;
+    margin: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     // max-height: 400px;
   }
 
@@ -383,13 +378,38 @@ body {
 
   .images {
     // border: 1px solid red;
-    width: 450px;
+    width: 600px;
     overflow: hidden;
     display: flex;
     align-items: center;
 
     img {
       width: 100%;
+      max-height: 450px;
+      margin: 0;
+      padding: 0;
+    }
+  }
+
+  .slider-dots {
+    width: 100px;
+    height: 30px;
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+
+    .slider-dot {
+      border: none;
+      background-color: $pink;
+      // width: 5px;
+      height: 12px;
+      margin-right: 12px;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+
+    .cherry {
+      background-color: $cherry;
     }
   }
 
