--- a/src/index.scss
+++ b/src/index.scss
@@ -262,22 +262,18 @@ body {
   }
 
   .phone-control {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
 
-    // .progress-meter {
-    //   position: relative;
-    //   width: 200px;
-    //   height: 3px;
-    //   background-color: $light-cherry;
-    //   margin: 25px;
-    //   border-radius: 3px;
-
-    //   img {
-    //     position: absolute;
-    //     top: -24px;
-    //     left: -24px;
-    //   }
-    // }
+    .song {
+      // border: 1px solid blue;
+      width: 220px;
+      height: 50px;
+      display: flex;
+      justify-content: center;
+    }
 
     input[type="range"] {
       -webkit-appearance: none;
@@ -333,6 +329,7 @@ body {
         background-color: $white;
         border: none;
         padding-inline: 10px;
+        cursor: pointer;
       }
     }
   }
