fix range input bug by extracting number from its value

--- a/src/index.scss
+++ b/src/index.scss
@@ -65,7 +65,7 @@ body {
   padding: 30px 150px;
   z-index: 5;
 
-  &.white-bg {
+  &.cherry-bg {
     background-color: $cherry;
     box-shadow: 0px 10px 10px -10px gray;
 
