--- a/src/index.scss
+++ b/src/index.scss
@@ -412,10 +412,15 @@ svg {
     display: flex;
     flex-direction: column;
     align-items: center;
-    // max-height: 400px;
+    
+    svg { 
+      width: 40px;
+      height: 40px;
+    }
   }
 
   .img-btn-container {
+    // border: 1px solid green;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -423,10 +428,11 @@ svg {
     max-height: 500px;
 
     button {
-      width: 40px;
-      height: 35px;
-      margin: 20px;
       border: none;
+      // border: 1px solid black;
+      width: 50px;
+      height: 50px;
+      margin: 20px;
       background-color: transparent;
       cursor: pointer;
     }
@@ -438,14 +444,14 @@ svg {
 
   .images {
     // border: 1px solid red;
-    width: 500px;
+    width: 600px;
     overflow: hidden;
     display: flex;
     align-items: center;
 
     img {
       width: 100%;
-      max-height: 500px;
+      max-height: 600px;
       margin: 0;
       padding: 0;
     }
