--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@ $pink: rgba(231, 113, 127, 1);
 $light-pink: rgba(231, 113, 127, 0.25);
 $gray: rgba(230, 230, 230, 1);
 $light-gray: rgba(233, 233, 233, 0.5);
+$shadow-gray: rgb(150, 150, 150);
 $white: #FFFFFF;
 
 $title--xl: 4.5rem;
@@ -395,6 +396,7 @@ svg {
     background-color: $white;
     border-radius: 20px;
     margin-bottom: 75px;
+    box-shadow: 0px 0px 60px 5px $shadow-gray;
   }
 
   .slider-container {
@@ -536,10 +538,12 @@ svg {
 
 .contact {
   // border: 1px solid red;
-  margin-inline: 300px;
+  margin-inline: 400px;
+  margin-bottom: 100px;
   border-radius: 20px;
   background-color: $white;
   padding: 50px;
+  box-shadow: 0px 0px 60px 5px $shadow-gray;
 
   h2 {
     font-family: 'Kaushan Script', cursive;
@@ -555,14 +559,36 @@ svg {
     align-items: center;
 
     a {
+      // border: 1px solid green;
       text-decoration: none;
       font-weight: 700;
       color: $cherry;
       margin-right: 10px;
+      
+
+      &.icon-link {
+        width: 30px;
+        display: flex;
+        justify-content: center;
+      }
 
       &:hover {
         color: $pink;
       }
+    }
+
+    svg {
+      // border: 1px solid red;
+      display: flex;
+      justify-content: flex-start;
+      width: 30px;
+      height: 40px;
+      text-align: left;
+    }
+
+    .email,
+    .linkedin {
+      width: 25px;
     }
   }
 
