--- a/src/index.scss
+++ b/src/index.scss
@@ -591,5 +591,11 @@ svg {
       width: 25px;
     }
   }
+}
 
+.not-found {
+  // border: 1px solid purple;
+  margin-inline: 150px;
+  height: 600px;
+  margin-bottom: 100px;
 }
