--- a/src/index.scss
+++ b/src/index.scss
@@ -102,6 +102,79 @@ svg {
 
 }
 
+.menu-icon {
+  border: none;
+  // border: 1px solid red;
+  background: transparent;
+  width: 75px;
+  height: 75px;
+  margin: 20px 150px;
+  cursor: pointer;
+
+  svg {
+    width: 50px;
+    height: 50px;
+  }
+}
+
+.menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 300px;
+  height: 100vh;
+  background-color: $cherry;
+  z-index: 20;
+  
+  button {
+    border: none;
+    background: transparent;
+    margin: 20px;
+    cursor: pointer;
+    
+    svg {
+      color: $white;
+      width: 50px;
+      height: 50px;
+
+      &:hover {
+        color: $pink;
+      }
+    }
+  }
+
+  ul {
+    // border: 1px solid pink;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+
+    li {
+      padding: 20px;
+      margin: 10px;
+      list-style: none;
+    }
+
+    li * {
+      // border: 1px solid yellow;
+      text-decoration: none;
+      color: $white;
+      font-size: $text--lg;
+      font-weight: 700;
+      letter-spacing: 2px;
+      padding: 15px 20px;
+      margin: 25px 10px;
+
+      &:hover {
+        color: $pink;
+      }
+    }
+  }
+}
+
 .btn {
   border-radius: 10px;
   text-decoration: none;
