--- a/src/index.scss
+++ b/src/index.scss
@@ -206,8 +206,6 @@ svg {
       border: none;
     }
   }
-
-  
 }
 
 .home-page {
@@ -217,16 +215,15 @@ svg {
   height: 800px;
   // flex-grow: 1;
   margin-inline: auto;
-
+  display: flex;
+  align-items: center;
 
   .home {
     // border: 1px solid pink;
     border-radius: 20px;
     background-color: $white;
-    // position: absolute;
     right: 150px;
     margin-inline: 300px 150px;
-    margin-top: 30px;
     padding-block: 60px 20px;
     padding-left: 160px;
     padding-right: 75px;
@@ -323,12 +320,19 @@ svg {
   }
 }
 
+.phone-container {
+  // border: 1px solid blue;
+  position: absolute;
+  top: 0;
+  left: 150px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
 .phone {
   // border: 1px solid purple;
   background-color: $white;
-  position: absolute;
-  top: 80px;
-  left: 150px;
   border-radius: 15px;
   box-shadow: 10px 10px 30px 1px rgba(0, 0, 0, 0.5);
   z-index: 1;
