reduce margin bottom on navbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -67,10 +67,10 @@ svg {
 }
 
 .navbar {
-  // border: 1px solid blue;
+  border: 1px solid blue;
   position: sticky;
   top: 0;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   padding: 30px 150px;
   z-index: 5;
 
