--- a/src/index.scss
+++ b/src/index.scss
@@ -210,11 +210,12 @@ svg {
 
 .home-page {
   position: relative;
-  // border: 1px solid green;
+  border: 1px solid green;
   width: 100%;
   height: 800px;
   // flex-grow: 1;
   margin-inline: auto;
+  margin-bottom: 50px;
   display: flex;
   align-items: center;
 
@@ -617,7 +618,7 @@ svg {
 .contact {
   // border: 1px solid red;
   margin-inline: 400px;
-  margin-bottom: 100px;
+  margin-block: 75px;
   border-radius: 20px;
   background-color: $white;
   padding: 50px;
