--- a/src/index.scss
+++ b/src/index.scss
@@ -103,13 +103,13 @@ svg {
   border: none;
   // border: 1px solid red;
   background: transparent;
-  // width: 8vw;
-  // height: 8vw;
-  // margin: 20px 150px;
+  margin: clamp(0px, 5vw, 75px);
   cursor: pointer;
 
   svg {
-    width: 50px;
+    color: $cherry;
+    width: clamp(25px, 5vw, 50px);
+    height: 100%;
   }
 }
 
@@ -117,19 +117,21 @@ svg {
   position: fixed;
   top: 0;
   left: 0;
-  // width: 300px;
-  // height: 100vh;
+  width: clamp(100px, 50%, 200px);
+  height: 100vh;
   background-color: $cherry;
   z-index: 20;
   
   button {
     border: none;
     background: transparent;
-    // margin: 20px;
+    margin: 20px;
     cursor: pointer;
     
     svg {
-      width: 50px;
+      color: $white;
+      width: 30px;
+      height: 100%;
 
       &:hover {
         color: $pink;
@@ -142,25 +144,20 @@ svg {
     display: flex;
     flex-direction: column;
     align-items: center;
-    // margin: 0;
-    // padding: 0;
-    // height: 100vh;
+    padding: 0;
 
     li {
-      // padding: 20px;
-      // margin: 10px;
+      padding: clamp(5px, 2vw, 20px);
+      margin: clamp(5px, 1vw, 10px);
       list-style: none;
     }
 
     li * {
-      // border: 1px solid yellow;
       text-decoration: none;
       color: $white;
-      // font-size: $text--lg;
+      font-size: clamp(0.5rem, 2vw, 1rem);
       font-weight: 700;
       letter-spacing: 2px;
-      // padding: 15px 20px;
-      // margin: 25px 10px;
 
       &:hover {
         color: $pink;
